<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".NewItemActivity">

    <TextView
        android:id="@+id/taskDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_title_1"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/detailsDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/more_details"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/more_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="93dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagsDisplay"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_toEndOf="@+id/display"
            android:text="@string/select"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/spinnerDisplay"
            android:layout_width="223dp"
            android:layout_height="98dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/tags"
            android:text=""
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/deadlineDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadline"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"/>

    <CheckBox
        android:id="@+id/reminder_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:soundEffectsEnabled="true"
        android:text="@string/remind_me"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/remindDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_time_to_remind"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_timePicker"
        android:text="@string/what_time" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp" />


    <RelativeLayout
        android:layout_width="388dp"
        android:layout_height="87dp"
        android:orientation="horizontal"
        android:padding="15dp">

        <Button
            android:id="@+id/cancel_butt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="10dp"
            android:onClick="cancelAction"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/button_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="167dp"
            android:layout_toEndOf="@+id/cancel_butt"
            android:onClick="saveAction"
            android:text="@string/save" />

    </RelativeLayout>

</LinearLayout>